refactor: 取消全市场实时报价
